src/test/ui/mismatched_types/issue-26480.stderr
error[E0308]: mismatched types
  --> $DIR/issue-26480.rs:26:19
   |
26 |                   $arr.len() * size_of($arr[0]));
   |                   ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ expected u64, found usize
...
37 |     write!(hello);
   |     -------------- in this macro invocation

error: non-scalar cast: `{integer}` as `()`
  --> $DIR/issue-26480.rs:32:19
   |
32 |     ($x:expr) => ($x as ())
   |                   ^^^^^^^^
...
38 |     cast!(2);
   |     --------- in this macro invocation

error: aborting due to 2 previous errors

